--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>OHH WHATS THISS???</title>
 
     <link href="bootsrap-or-whatever.css" rel="stylesheet">
+    <link href="README.md" rel="read pls">
     <link href="//fonts.googleapis.com/css?family=Roboto:400,100,700,900" rel="stylesheet" type="text/css">
     <link href="orangutan (1).png" rel="icon" type="image/png">
 
